--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "better-scroll": "^1.13.2",
     "ly-tab": "^2.1.1",
     "swiper": "^4.4.2",
     "vue": "^2.5.2",
